# ChangeLog for app-emacs/ses
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/ses/Attic/ChangeLog,v 1.2 2007/02/06 13:45:32 flameeyes Exp $

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*ses-031130 (09 Jan 2006)

  09 Jan 2006; Matthew Kennedy <mkennedy@gentoo.org> +files/50ses-gentoo.el,
  +ses-031130.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>.
