@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/ses
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ses/Attic/ChangeLog,v 1.2 2007/02/06 13:45:32 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ses/Attic/ChangeLog,v 1.3 2007/07/03 09:26:07 opfer Exp $
+
+  03 Jul 2007; Christian Faulhammer <opfer@gentoo.org> ses-031130.ebuild:
+  adjusted DESCRIPTION; removed src_install(); removed DEPEND on
+  virtual/emacs; added die comment
 
   06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
